@startuml

title __MEDIA's Class Diagram__\n

  package venteEnLigne {
    class Author {
    }
  }
  

  package venteEnLigne {
    class Book {
    }
  }
  

  package venteEnLigne {
    class Cart {
    }
  }
  

  package venteEnLigne {
    class CartRow {
    }
  }
  

  package venteEnLigne {
    class Cd {
    }
  }
  

  package venteEnLigne {
    class Dvd {
    }
  }
  

  package venteEnLigne {
    interface IMedia {
    }
  }
  

  package venteEnLigne {
    abstract class Media {
    }
  }
  

  package venteEnLigne {
    class MediaMain {
    }
  }
  

  package venteEnLigne {
    class Publisher {
    }
  }
  

  Book -up-|> Media
  CartRow o-- IMedia : media
  Cd -up-|> Media
  Dvd -up-|> Media
  Media -up-|> IMedia
  Media o-- Publisher : publisher


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
